# Riftwalker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MEMORY.md  README.md  check_self_assigns.sh  check_visuals.sh  resource.rc  run-autoloop.ps1  run-autoloop.sh
.claude/rules/: bug-patterns.md
.github/workflows/: visual-tests.yml
docs/: HANDOFF_2026-05-25.md  HISTORY.md  STEAM_RELEASE.md  comfyui-riftwalker-v1.md
installer/: README.md  Riftwalker.iss
src/: main.cpp
src/Components/: AIComponent.h  AbilityComponent.h  AnimationComponent.h  ColliderComponent.cpp  ColliderComponent.h  CombatComponent.h  HealthComponent.h  PhysicsBody.h  RelicComponent.h  SpriteComponent.h  TransformComponent.h
src/Core/: AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  CrashHandler.cpp  CrashHandler.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  Localization.cpp  Localization.h  MusicSystem.cpp  MusicSystem.h  ResourceManager.cpp  ResourceManager.h  SaveUtils.h  ScreenCapture.cpp  ScreenCapture.h  SoundGenerator.cpp  SoundGenerator.h  SoundGeneratorMusic.cpp  SoundGeneratorSFX.cpp  SteamShim.cpp  SteamShim.h  Timer.cpp  Timer.h  VisualTest.cpp  VisualTest.h  Window.cpp  Window.h
src/ECS/: Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/Game/: AchievementSystem.cpp  AchievementSystem.h  AscensionSystem.cpp  AscensionSystem.h  Bestiary.cpp  Bestiary.h  ChallengeMode.cpp  ChallengeMode.h  ClassSystem.cpp  ClassSystem.h  DailyRun.cpp  DailyRun.h  DimensionManager.cpp  DimensionManager.h  DimensionShiftBalance.h  Enemy.cpp  Enemy.h  EnemyBoss.cpp  GameBalance.h  ItemDrop.cpp  ItemDrop.h  Level.cpp  Level.h  LevelGenerator.cpp  LevelGenerator.h  LevelGeneratorInternal.h  LevelGeneratorPlacement.cpp  LevelGeneratorRooms.cpp  LevelGeneratorValidation.cpp  LevelTopology.h  LoreSystem.cpp  LoreSystem.h  NPCSystem.cpp  NPCSystem.h  Player.cpp  Player.h  PlayerAbilities.cpp  PlayerCombat.cpp  PlayerGrapple.cpp  RandomEvent.h  (+24 more)
src/States/: AchievementsState.cpp  AchievementsState.h  BestiaryState.cpp  BestiaryState.h  ChallengeSelectState.cpp  ChallengeSelectState.h  ClassSelectState.cpp  ClassSelectState.h  CreditsState.cpp  CreditsState.h  DailyLeaderboardState.cpp  DailyLeaderboardState.h  DifficultySelectState.cpp  DifficultySelectState.h  EndingState.cpp  EndingState.h  GameOverState.cpp  GameOverState.h  GameState.h  KeybindingsState.cpp  KeybindingsState.h  LoreState.cpp  LoreState.h  MenuState.cpp  MenuState.h  NGPlusSelectState.cpp  NGPlusSelectState.h  OptionsState.cpp  OptionsState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  PlayStateCombatChallenge.cpp  PlayStateDynamicEvents.cpp  PlayStateEvents.cpp  PlayStatePlaytest.cpp  PlayStateRender.cpp  PlayStateRenderCombatUI.cpp  PlayStateRenderHUD.cpp  (+18 more)
src/Systems/: AIEnemyAdvanced.cpp  AISystem.cpp  AISystem.h  BossAI.h  BossDimensionalArchitect.cpp  BossEntropyIncarnate.cpp  BossRiftGuardian.cpp  BossTemporalWeaver.cpp  BossVoidSovereign.cpp  BossVoidWyrm.cpp  CollisionSystem.cpp  CollisionSystem.h  CombatSystem.cpp  CombatSystem.h  CombatSystemEffects.cpp  CombatSystemUpdate.cpp  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  RenderSystemBosses.cpp  RenderSystemEnemies.cpp  RenderSystemPlayer.cpp
src/UI/: Button.cpp  Button.h  HUD.cpp  HUD.h  UITextures.h
steam/: achievements_dashboard_list.md  achievements_icons.txt  achievements_schema.csv
steam/scripts/: app_build.vdf  depot_build.vdf
tests/visual_reference/: KNOWN_FAILURES.md
tools/: ai_visual_review.py  comfyui_gen.py  comfyui_runner.py  comfyui_sprites.py  deploy_local.ps1  extract_best_frames.py  fix_backgrounds_aggressive.py  fix_grabcut.py  fix_sprite_sheets.py  fix_sprites_pro.py  gen_bosses.py  gen_enemies.py  gen_music.py  gen_music_v3.py  gen_placeholders.py  gen_sprites_v2.py  gen_sprites_v3.py  gen_steam_achievements.py  gen_ui_textures.py  gen_zone45_midi.py  generate_all_assets.py  generate_pixel_sprites.py  generate_sfx.py  generate_sprites.py  generate_tileset.py  make_icon.py  make_steam_build.ps1  make_store_capsules.py  package_release.py  record_gameplay.py  run_playtests.py  screenshot.py  smoke-regression.ps1  sound_ab_test.py  visual-regression.ps1  visual-regression.sh  visual_diff.cpp  visual_report.py
tools/sprite_generator/: boss_sprites.py  config.py  enemy_sprites.py  generate_all.py  palette.py  pickup_sprites.py  player_sprites.py  projectile_sprites.py  tile_sprites.py  utils.py
